{{$NEXT}}

- Require Perl 5.10. Perl 5.8.x has very weird parsing failures on valid Perl
  code in this distribution.


0.29   2017-12-31

- Make the GitHub dialect look for fenced code blocks before other types of
  markup. Otherwise this could parse the _inside_ of a fenced code block as
  containing some sort of block-level markup like a two-line list. Reported by
  Frew Schmidt. GitHub #10.


0.28   2017-11-21

- Require Moose 2.1802 for full compatibility with Specio.


0.27   2017-11-09

- Replaced MooseX::Params::Validate and MooseX::Types with
  Params::ValidationCompiler and Specio. There are also some other internals
  changes to improve performance in this release. Prompted by fREW
  Schmidt. GitHub #9.


0.26   2015-05-31

- Fixes for Unicode characters when generating HTML. The Markdent::Simple::*
  classes now make sure that the scalar it returns containing HTML contains
  characters, not bytes. The Markdent::Handler::HTMLStream::* classes no
  longer entitize non-ASCII characters. Only control characters and HTML
  reserved characters (< > & ") are encoded as HTML entities. The problems
  with Unicode handling were reported by Polina Shubha. GitHub PR #8.

- HTML blocks containing Unicode characters could cause the parser to die or
  warn. Reported by Polina Shubha. GitHub PR #8.

- A change in 0.25 broke the ability to have a dialect with just a block
  parser or span parser rather than both. Reported by Polina Shubina. GitHub
  issue #7.

- The parsing of HTML entities was too greedy, so that something like
  "&lt;word&gt;" would be parsed a single entity, "lt;word&gt", which is
  clearly wrong. Fixed by Polina Shubina. GitHub PR #3.

- Accept Pandoc (1.12.3)-generated GitHub-format Markdown document style for
  fenced code blocks - "``` {.Perl}". Implemented by Andrew Speer. GitHub PR
  #4.


0.25   2015-01-04

- HTML output now uses the HTML5 doctype. In addition, table cell alignment is