@@ -1,8 +1,8 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.011.
 use strict;
 use warnings;
 
-
+use 5.010;
 
 use ExtUtils::MakeMaker;
 
@@ -17,6 +17,7 @@ my %WriteMakefileArgs = (
     "bin/markdent-html"
   ],
   "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.010",
   "NAME" => "Markdent",
   "PREREQ_PM" => {
     "Digest::SHA1" => 0,
@@ -36,7 +37,7 @@ my %WriteMakefileArgs = (
     "MooseX::Role::Parameterized" => 0,
     "MooseX::SemiAffordanceAccessor" => "0.05",
     "MooseX::StrictConstructor" => "0.08",
-    "Params::ValidationCompiler" => 0,
+    "Params::ValidationCompiler" => "0.14",
     "Scalar::Util" => 0,
     "Specio::Declare" => 0,
     "Specio::Exporter" => 0,
@@ -59,7 +60,7 @@ my %WriteMakefileArgs = (
     "File::Spec" => 0,
     "File::Temp" => 0,
     "IO::File" => 0,
-    "Test2::V0" => 0,
+    "Test2::V0" => "0.000081",
     "Test::More" => "1.302015",
     "Test::Requires" => 0,
     "Tree::Simple::Visitor::ToNestedArray" => 0,
@@ -98,13 +99,13 @@ my %FallbackPrereqs = (
   "MooseX::Role::Parameterized" => 0,
   "MooseX::SemiAffordanceAccessor" => "0.05",
   "MooseX::StrictConstructor" => "0.08",
-  "Params::ValidationCompiler" => 0,
+  "Params::ValidationCompiler" => "0.14",
   "Scalar::Util" => 0,
   "Specio::Declare" => 0,
   "Specio::Exporter" => 0,
   "Specio::Library::Builtins" => 0,
   "Specio::Library::Numeric" => 0,
-  "Test2::V0" => 0,
+  "Test2::V0" => "0.000081",
   "Test::More" => "1.302015",
   "Test::Requires" => 0,
   "Tree::Simple" => 0,
