@@ -15,7 +15,7 @@ requires "MooseX::Getopt::OptionTypeMap" => "0";
 requires "MooseX::Role::Parameterized" => "0";
 requires "MooseX::SemiAffordanceAccessor" => "0.05";
 requires "MooseX::StrictConstructor" => "0.08";
-requires "Params::ValidationCompiler" => "0";
+requires "Params::ValidationCompiler" => "0.14";
 requires "Scalar::Util" => "0";
 requires "Specio::Declare" => "0";
 requires "Specio::Exporter" => "0";
@@ -26,6 +26,7 @@ requires "Try::Tiny" => "0";
 requires "base" => "0";
 requires "namespace::autoclean" => "0.09";
 requires "parent" => "0";
+requires "perl" => "5.010";
 requires "re" => "0";
 requires "strict" => "0";
 requires "warnings" => "0";
@@ -38,7 +39,7 @@ on 'test' => sub {
   requires "File::Spec" => "0";
   requires "File::Temp" => "0";
   requires "IO::File" => "0";
-  requires "Test2::V0" => "0";
+  requires "Test2::V0" => "0.000081";
   requires "Test::More" => "1.302015";
   requires "Test::Requires" => "0";
   requires "Tree::Simple::Visitor::ToNestedArray" => "0";
@@ -80,5 +81,4 @@ on 'develop' => sub {
   requires "Test::Vars" => "0.009";
   requires "Test::Version" => "2.05";
   requires "WebService::Validator::HTML::W3C" => "0";
-  requires "perl" => "5.006";
 };
